--- a/omnicell/tasks/test.yaml
+++ b/omnicell/tasks/test.yaml
@@ -1,8 +1,7 @@
 data:
-  type: cell
   control: unst
   target: LPS
-  condition: condition
+  pert_key: condition
   path: datasets/scrna-crossspecies/hvg-top1k-train-only.h5ad
 
 dataloader:
@@ -10,7 +9,7 @@ dataloader:
   shuffle: true
 
 datasplit:
-  holdout: rat
+  pert_number_folds:
   key: species 
   groupby: ['species', 'condition']
   name: toggle_ood
