--- a/omnicell/configs/tasks/satija_ho_A549.yaml
+++ b/omnicell/configs/tasks/satija_ho_A549.yaml
@@ -1,4 +1,4 @@
-name: test
+name: satija_ho_A549
 
 data: 
   path: /orcd/archive/abugoot/001/Projects/dlesman/datasets/satija_IFNB_HVG_and_perturbed_genes_normed.h5ad
@@ -21,7 +21,7 @@ datasplit:
     #Targets on which we evaluate when we do the holdout, can be ALL
     #If these are also heldout then we are evaluating on unseen cell + unseen pert
     #Set the combinations to evaluate on, we can implement more complex commands later on
-    evaluation_targets: [[A549, USP18], [A549, IFNAR1], [A549, IFNAR2]]
+    evaluation_targets: [[A549, IFNAR1], [A549, IFNAR2], [A549, TYK2], [A549, STAT2], [A549, USP18], [A549, IRF9], [A549, JAK1]]
 
 
   #holdout_cells: [xxx]
