--- a/omnicell/configs/tasks/kang/kang_ho_CD4T.yaml
+++ b/omnicell/configs/tasks/kang/kang_ho_CD4T.yaml
@@ -10,12 +10,16 @@ data:
 datasplit:
   #test_size: 1000
   #control_size: 1000
+  #Mode can be ood or iid --> 
+
+  mode: ood
   training:
     #Random folds need to be implemented
     #TODO: More complex splits
 
     #Annoying part is if we have random splits how will we define the tasks? -
     holdout_cells: [CD4T]
+
 
   evals:
 
