--- a/omnicell/configs/models/scVIDR.yaml
+++ b/omnicell/configs/models/scVIDR.yaml
@@ -1,4 +1,4 @@
-name: vae
+name: scVIDR
 model:
   latent_dim: 100
   hidden_dim: 800
@@ -8,4 +8,5 @@ training:
   learning_rate: 0.001
   alpha: 0.001
   epochs: 200
+  delta_predictor_epochs: 100
   batsize: 32
