--- a/omnicell/configs/tasks/kang/kang_ho_CD4T_new.yaml
+++ b/omnicell/configs/tasks/kang/kang_ho_CD4T_new.yaml
@@ -3,14 +3,8 @@ data:
   dataset_name: kang
   log1p: True
   count_norm: True
-  embedding: umap #Note, whatt if we have both log1p and count_norm true and an embedding, can we ensure that the embedding is applied after the log1p and count_norm?
-
-
-dataloader:
-  type: adata
-  mapping: test
-  batch_size: 128
-  shuffle: true
+  cell_embedding: umap #Note, whatt if we have both log1p and count_norm true and an embedding, can we ensure that the embedding is applied after the log1p and count_norm?
+  pert_embedding: null
 
 
 datasplit:
