--- a/omnicell/configs/splits/kang/kang_ho_CD4T.yaml
+++ b/omnicell/configs/splits/kang/kang_ho_CD4T.yaml
@@ -4,7 +4,7 @@ data:
   log1p: True 
   count_norm: True
   #cell_embedding: False #Note, whatt if we have both log1p and count_norm true and an embedding, can we ensure that the embedding is applied after the log1p and count_norm?
-  pert_embedding: UCE_ESM2_Mean_Imputed
+  pert_embedding: null
 
 
 datasplit:
