--- a/omnicell/configs/splits/kang/kang_ho_CD4T.yaml
+++ b/omnicell/configs/splits/kang/kang_ho_CD4T.yaml
@@ -3,7 +3,7 @@ data:
   dataset: kang
   log1p: True 
   count_norm: True
-  #cell_embedding: False #Note, whatt if we have both log1p and count_norm true and an embedding, can we ensure that the embedding is applied after the log1p and count_norm?
+  cell_embedding: False #Note, whatt if we have both log1p and count_norm true and an embedding, can we ensure that the embedding is applied after the log1p and count_norm?
   pert_embedding: null
 
 
