flow test config

--- a/omnicell/configs/models/flow.yaml
+++ b/omnicell/configs/models/flow.yaml
@@ -4,7 +4,7 @@ name: flow
 cell_dist_metric: l2
 
 training:
-  epochs: 100
+  max_epochs: 300
   lr: 0.001
   weight_decay: 0.0001
   early_stopping: 10
