--- a/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_0/eval_config.yaml
+++ b/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_0/eval_config.yaml
@@ -1,23 +1,23 @@
 dataset: satija_IFNB_raw
 evaluation_targets:
 - - A549
-  - IFNAR2
+  - JAK1
 - - A549
-  - HERC5
+  - HES4
 - - A549
-  - CRKL
+  - SOCS1
+- - A549
+  - IRF9
+- - A549
+  - MAPK8
+- - A549
+  - ID2
+- - A549
+  - CEBPB
+- - A549
+  - HERC6
 - - A549
   - USP18
 - - A549
-  - BRD9
-- - A549
-  - TYK2
-- - A549
-  - SMARCA5
-- - A549
-  - STAT4
-- - A549
-  - SP100
-- - A549
-  - DTX3L
+  - ID3
 name: eval_0_ss:ns-10:5
