--- a/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_0/split_config.yaml
+++ b/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_0/split_config.yaml
@@ -1,15 +1,15 @@
-dataset_name: satija_IFNB_raw
+dataset: satija_IFNB_raw
 holdout_cells: []
 holdout_perts:
-- IFNAR2
-- HERC5
-- CRKL
+- JAK1
+- HES4
+- SOCS1
+- IRF9
+- MAPK8
+- ID2
+- CEBPB
+- HERC6
 - USP18
-- BRD9
-- TYK2
-- SMARCA5
-- STAT4
-- SP100
-- DTX3L
+- ID3
 mode: ood
 name: split_0_ss:ns-10:5
