--- a/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_1/split_config.yaml
+++ b/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_1/split_config.yaml
@@ -1,15 +1,15 @@
-dataset_name: satija_IFNB_raw
+dataset: satija_IFNB_raw
 holdout_cells: []
 holdout_perts:
+- ID3
+- HERC6
+- SOCS1
+- HES4
+- MAPK8
+- ID2
+- CEBPB
+- IRF9
+- JAK1
 - USP18
-- CRKL
-- BRD9
-- IFNAR2
-- SMARCA5
-- HERC5
-- DTX3L
-- STAT4
-- TYK2
-- SP100
 mode: ood
 name: split_1_ss:ns-10:5
