--- a/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_2/split_config.yaml
+++ b/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_2/split_config.yaml
@@ -1,15 +1,15 @@
-dataset_name: satija_IFNB_raw
+dataset: satija_IFNB_raw
 holdout_cells: []
 holdout_perts:
-- IFNAR2
-- DTX3L
-- SP100
-- TYK2
-- BRD9
-- STAT4
-- HERC5
-- SMARCA5
-- CRKL
+- MAPK8
+- SOCS1
+- CEBPB
+- JAK1
+- ID2
+- ID3
+- HERC6
 - USP18
+- HES4
+- IRF9
 mode: ood
 name: split_2_ss:ns-10:5
