--- a/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_3/split_config.yaml
+++ b/omnicell/configs/satija_IFNB_raw/random_splits/acrossP_ood_ss:ns-10:5/split_3/split_config.yaml
@@ -1,15 +1,15 @@
-dataset_name: satija_IFNB_raw
+dataset: satija_IFNB_raw
 holdout_cells: []
 holdout_perts:
+- ID3
+- HES4
+- HERC6
+- MAPK8
+- IRF9
+- SOCS1
 - USP18
-- TYK2
-- SP100
-- SMARCA5
-- DTX3L
-- HERC5
-- BRD9
-- STAT4
-- CRKL
-- IFNAR2
+- JAK1
+- CEBPB
+- ID2
 mode: ood
 name: split_3_ss:ns-10:5
