--- a/omnicell/configs/models/sclambda.yaml
+++ b/omnicell/configs/models/sclambda.yaml
@@ -1,1 +1,7 @@
 name: sclambda
+latent_dim = 30, hidden_dim = 512,
+training_epochs = 200,
+batch_size = 500,
+lambda_MI = 200,
+eps = 0.001,
+seed = 1234,
