Unfucking the branch

--- a/omnicell/configs/catalogue/satija_IFNB_raw.yaml
+++ b/omnicell/configs/catalogue/satija_IFNB_raw.yaml
@@ -5,11 +5,16 @@ control: NT
 count_normalized: false
 description: Some description of the dataset
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/
+gene_embeddings:
+- llamaPMC-7B
+- llamaPMC-13B
+- bioBERT
+- MMedllama-3-8B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad
 pert_embeddings:
 - UCE_ESM2_Mean_Imputed
 - BioBERT
 pert_key: gene
-var_names_key: gene
-
+precomputed_DEGs: false
+var_names_key: null
