--- a/omnicell/configs/satija_IFNB_raw/splits/satija_test_A549_only/satija_test_split_A549_only.yaml
+++ b/omnicell/configs/satija_IFNB_raw/splits/satija_test_A549_only/satija_test_split_A549_only.yaml
@@ -1,7 +1,6 @@
-
 name: satija_test_eval_A549_only
 mode: ood
-#Annoying part is if we have random splits how will we define the tasks? -
+dataset: satija_IFNB_raw
 holdout_perts: ['IFNAR2', 'STAT2']
 holdout_cells: ['BXPC3', 'HAP1', 'HT29', 'K562', 'MCF7']
 
