--- a/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
+++ b/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
@@ -3,11 +3,11 @@ cell_embeddings: []
 cell_key: cell_type
 control: NT
 count_normalized: false
-description: Some description of the dataset
+description: Repogle K562 datasets, fetched from Dans folder on Openmind
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/
 gene_embeddings: []
 log1p_transformed: false
-path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/dataset.h5ad
+path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad
 pert_embeddings:
 pert_key: gene
 precomputed_DEGs: false
