--- a/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
+++ b/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
@@ -1,14 +1,14 @@
 HVG: false
 cell_embeddings: []
 cell_key: cell_type
-control: NT
+control: non-targeting
 count_normalized: false
 description: Repogle K562 datasets, fetched from Dans folder on Openmind
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/
 gene_embeddings: []
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad
-pert_embeddings:
+pert_embeddings: []
 pert_key: gene
 precomputed_DEGs: false
 var_names_key: null
