--- a/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
+++ b/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml
@@ -5,7 +5,11 @@ control: non-targeting
 count_normalized: false
 description: Repogle K562 datasets, fetched from Dans folder on Openmind
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/
-gene_embeddings: []
+gene_embeddings:
+- bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
+- llamaPMC-13B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad
 pert_embeddings: []
