--- a/configs/catalogue/satija_IFNB_raw.yaml
+++ b/configs/catalogue/satija_IFNB_raw.yaml
@@ -5,16 +5,10 @@ control: NT
 count_normalized: false
 description: Some description of the dataset
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/
-gene_embeddings:
-- llamaPMC-7B
-- llamaPMC-13B
-- bioBERT
-- MMedllama-3-8B
+gene_embeddings: []
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad
-pert_embeddings:
-- UCE_ESM2_Mean_Imputed
-- BioBERT
+pert_embeddings: []
 pert_key: gene
 precomputed_DEGs: true
 var_names_key: null
