--- a/configs/catalogue/kang.yaml
+++ b/configs/catalogue/kang.yaml
@@ -5,10 +5,17 @@ control: control
 count_normalized: false
 description: Some description of the dataset
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/kang/
-gene_embeddings: []
+gene_embeddings:
+- bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
+- llamaPMC-13B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/kang/kang.h5ad
-pert_embeddings: []
+pert_embeddings:
+- bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
 pert_key: condition_key
 precomputed_DEGs: false
 var_names_key: null
