--- a/configs/catalogue/satija_IFNB_raw.yaml
+++ b/configs/catalogue/satija_IFNB_raw.yaml
@@ -7,10 +7,13 @@ description: Some description of the dataset
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/
 gene_embeddings:
 - bioBERT
+- MMedllama-3-8B
+- llamaPMC-7B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/satija_IFNB_raw/Seurat_IFNB.h5ad
 pert_embeddings:
 - bioBERT
+- MMedllama-3-8B
 pert_key: gene
 precomputed_DEGs: true
 var_names_key: null
