Deleting seless pert  embeddings on kang

--- a/configs/catalogue/kang.yaml
+++ b/configs/catalogue/kang.yaml
@@ -12,10 +12,7 @@ gene_embeddings:
 - llamaPMC-13B
 log1p_transformed: false
 path: /orcd/data/omarabu/001/Omnicell_datasets/kang/kang.h5ad
-pert_embeddings:
-- bioBERT
-- MMedllama-3-8B
-- llamaPMC-7B
+pert_embeddings: []
 pert_key: condition_key
 precomputed_DEGs: false
 var_names_key: null
