Pulling all changes from branch 124

--- a/configs/models/gears.yaml
+++ b/configs/models/gears.yaml
@@ -1,9 +1,8 @@
 name: gears
-skip_calc_de: False
 batch_size: 32
 test_batch_size: 128
 hidden_size: 64
 epochs: 20
 lr: 0.001
 weight_bias_track: False
-ditribution_strategy: jason
+distribution_strategy: jason
