--- a/configs/catalogue/ZhaoSims2021.yaml
+++ b/configs/catalogue/ZhaoSims2021.yaml
@@ -1,6 +1,6 @@
 HVG: false
 cell_embeddings: []
-cell_key: cell_type
+cell_key: celltype
 control: non-targeting
 count_normalized: false
 description: Downloaded from scPerturb website
