--- a/configs/catalogue/XieHon2017.yaml
+++ b/configs/catalogue/XieHon2017.yaml
@@ -1,6 +1,6 @@
 HVG: false
 cell_embeddings: []
-cell_key: null
+cell_key: cell_line
 control: non-targeting
 count_normalized: false
 description: Downloaded from scPerturb website
@@ -9,6 +9,6 @@ gene_embeddings: []
 log1p_transformed: false
 path: /orcd/data/omarabu/001/neelroy/XieHon2017/XieHon2017.h5ad
 pert_embeddings: []
-pert_key: gene
+pert_key: perturbation
 precomputed_DEGs: false
 var_names_key: null
