--- a/configs/catalogue/ZhaoSims2021.yaml
+++ b/configs/catalogue/ZhaoSims2021.yaml
@@ -9,6 +9,6 @@ gene_embeddings: []
 log1p_transformed: false
 path: /orcd/data/omarabu/001/neelroy/ZhaoSims2021/ZhaoSims2021.h5ad
 pert_embeddings: []
-pert_key: gene
+pert_key: perturbation
 precomputed_DEGs: false
 var_names_key: null
