--- a/configs/catalogue/ReplogleWeissman2022_rpe1.yaml
+++ b/configs/catalogue/ReplogleWeissman2022_rpe1.yaml
@@ -1,7 +1,7 @@
 HVG: false
 cell_embeddings: []
-cell_key: celltype
-control: non-targeting
+cell_key: cell_type
+control: control
 count_normalized: false
 description: Downloaded from scPerturb website
 folder_path: /orcd/data/omarabu/001/Omnicell_datasets/ReplogleWeissman2022/rpe1
