Updated configs, L4 Model (Incomplete), UCE Embedding, Fix to sampling utils to yield correctly

--- a/configs/catalogue/TianKampmann2019_iPSC.yaml
+++ b/configs/catalogue/TianKampmann2019_iPSC.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/TianKampmann2019/iPSC/TianKampman
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
