--- a/configs/models/linear_mean_model_l4.yaml
+++ b/configs/models/linear_mean_model_l4.yaml
@@ -2,7 +2,7 @@
 
 name: mean_model
 
-model_type: linear
+model_type: l4
 pca_pert_embeddings: True
 pca_pert_embeddings_components: 10
-autofocus: False
+autofocus: True
