--- a/configs/catalogue/AdamsonWeissman2016_GSM2406675_10X001.yaml
+++ b/configs/catalogue/AdamsonWeissman2016_GSM2406675_10X001.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/Adamson2016/GSM2406675_10X001/Ada
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
