--- a/configs/catalogue/AdamsonWeissman2016_GSM2406681_10X010.yaml
+++ b/configs/catalogue/AdamsonWeissman2016_GSM2406681_10X010.yaml
@@ -1,4 +1,4 @@
-HVG: False
+HVG: false
 cell_embeddings: []
 cell_key: celltype
 control: non-targeting
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/Adamson2016/GSM2406681_10X010/Ada
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
