--- a/configs/catalogue/ChangYe2021.yaml
+++ b/configs/catalogue/ChangYe2021.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/ChangYe2021/ChangYe2021.h5ad
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
