--- a/configs/catalogue/DixitRegev2016.yaml
+++ b/configs/catalogue/DixitRegev2016.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/DixitRegev2016/DixitRegev2016.h5a
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
