--- a/configs/catalogue/GasperiniShendure2019_highMOI.yaml
+++ b/configs/catalogue/GasperiniShendure2019_highMOI.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/GasperiniShendure2019/highMOI/Gas
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
