--- a/configs/catalogue/GehringPachter2019.yaml
+++ b/configs/catalogue/GehringPachter2019.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/GehringPachter2019/GehringPachter
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
