--- a/configs/catalogue/McFarlandTsherniak2020.yaml
+++ b/configs/catalogue/McFarlandTsherniak2020.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/McFarlandTsherniak2020/McFarlandT
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
