--- a/configs/catalogue/ReplogleWeissman2022_K562_gwps.yaml
+++ b/configs/catalogue/ReplogleWeissman2022_K562_gwps.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/ReplogleWeissman2022/K562_gwps/Re
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
