--- a/configs/catalogue/SchraivogelSteinmetz2020_TAP_SCREEN__chromosome_11_screen.yaml
+++ b/configs/catalogue/SchraivogelSteinmetz2020_TAP_SCREEN__chromosome_11_screen.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/neelroy/SchraivogelSteinmetz2020/TAP_SCREEN__chromo
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
