--- a/configs/catalogue/ShifrutMarson2018.yaml
+++ b/configs/catalogue/ShifrutMarson2018.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/ShifrutMarson2018/ShifrutMarson20
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
