--- a/configs/catalogue/SrivatsanTrapnell2020_sciplex3.yaml
+++ b/configs/catalogue/SrivatsanTrapnell2020_sciplex3.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/SrivatsanTrapnell2020/sciplex3/Sr
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: gene_symbol
