--- a/configs/catalogue/TianKampmann2021_CRISPRa.yaml
+++ b/configs/catalogue/TianKampmann2021_CRISPRa.yaml
@@ -11,4 +11,5 @@ path: /orcd/data/omarabu/001/Omnicell_datasets/TianKampmann2021/CRISPRa/TianKamp
 pert_embeddings: []
 pert_key: perturbation
 precomputed_DEGs: false
+synthetic_versions: []
 var_names_key: null
