--- a/configs/catalogue/repogle_k562_essential_raw.yaml
+++ b/configs/catalogue/repogle_k562_essential_raw.yaml
@@ -18,6 +18,8 @@ pert_embeddings:
 - llamaPMC-7B
 - llamaPMC-13B
 - GenePT
+- ESM2_UCE_HomoSapiens
 pert_key: gene
 precomputed_DEGs: true
+synthetic_versions: []
 var_names_key: null
