--- a/configs/ETL/no_preproc_drop_unmatched_scot.yaml
+++ b/configs/ETL/no_preproc_drop_unmatched_scot.yaml
@@ -3,7 +3,7 @@ log1p: False
 HVG: False 
 count_norm: False
 drop_unmatched_perts: True
-synthetic_model_config_path: ./configs/models/scot/proportional_scot.yaml
+synthetic_model_config_path: ./configs/models/scot/proportional_scot.yaml #Should be a relative path
 
 
 
