Deleting copied model

--- a/configs/models/RF_mean_model.yaml
+++ b/configs/models/RF_mean_model.yaml
@@ -5,4 +5,7 @@ name: RF_mean_model
 model_type: rf
 pca_pert_embeddings: True
 pca_pert_embeddings_components: 10
+pca_cell_emb_components: 50
 autofocus: False
+param_grid:
+  n_estimators: [100, 200, 400, 600]
