--- a/configs/models/RF_mean_model.yaml
+++ b/configs/models/RF_mean_model.yaml
@@ -8,4 +8,4 @@ pca_pert_embeddings_components: 10
 pca_cell_emb_components: 50
 autofocus: False
 param_grid:
-  n_estimators: [100, 200, 400, 600]
+  n_estimators: [50, 100, 200]
