--- a/configs/splits/satija_IFNB_raw/random_splits/rs_accC_A549_BXPC3_MCF7_ood_ss:ns_5_3_most_pert_0.1/split_BXPC3/split_config.yaml
+++ b/configs/splits/satija_IFNB_raw/random_splits/rs_accC_A549_BXPC3_MCF7_ood_ss:ns_5_3_most_pert_0.1/split_BXPC3/split_config.yaml
@@ -3,4 +3,4 @@ holdout_cells:
 - BXPC3
 holdout_perts: []
 mode: ood
-name: rs-across-cells-ood-split-ss:10_split_BXPC3
+name: rs_accC_A549_BXPC3_MCF7_ood_ss:ns_5_3_most_pert_0.1-split_BXPC3
